@@ -65,7 +65,7 @@
    "codelist": "BudgetIdentifierVocabulary"
   }
  ],
- "/iati-activities/iati-activity/crs-add/channel-code/text()": [
+ "/iati-activities/iati-activity/crs-add/channel-code": [
   {
    "codelist": "CRSChannelCode"
   }
