@@ -3,6 +3,7 @@ Development Portal (2020-02-08 shi)
 Add crs-add
 Display crs-add elements
 Update css for new elements
+Removed text bracket from crs channel-code
 
 
 Development Portal (2020-02-07 shi)
